# fetch-wgu-osmt

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
resources/input/: RSD Skills - Accountants and Auditors_Dec.2022 - 2025-10-25.csv  RSD Skills - Business Ethics_Feb.2023 - 2025-10-30.csv  RSD Skills - Financial Examiners_Jan.2023 - 2025-10-31.csv  RSD Skills - Systems Engineer_May.2023 - 2025-10-31.csv  proxies.txt
tests/: test_build_assemble.py  test_fetch_wgu.py  test_graph_prereqs.py  test_reports_prereqs.py
wgu_osmt/: __init__.py  orchestrator.py
wgu_osmt/dto/: __init__.py
wgu_osmt/svc/: __init__.py  fetch_wgu_data.py
wgu_osmt_builder/common/: cli.py  config.py  csv_utils.py  log.py  paths.py  ua.py
wgu_osmt_builder/fetch/: collections.py  wgu.py
wgu_osmt_builder/graph/: README.md  constraints.cypher  export.py  neo_load.sh
wgu_osmt_builder/graph/load/: load_nodes.cypher  load_rels.cypher  neo_load.sh
wgu_osmt_builder/validate/: alignments.py  bls.py  keywords.py  rsd.py
