[tool.poetry]
name = "wgu-osmt-builder"
version = "0.1.11"
description = "WGU OSMT → TTL converter and ontology tools"
license = "MIT"
readme = "README.md"

authors = ["Craig Trim <craigtrim@gmail.com>"]

maintainers = ["Craig Trim <craigtrim@gmail.com>"]

repository = "https://github.com/craigtrim/transcriptiq/libs/wgu-osmt-bulder"

keywords = ["osmt", "skills", "ontology", "rdf", "ttl", "education", "nlp"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/craigtrim/transcriptiq/issues"


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
rdflib = "^6.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^3.8.0"
autopep8 = "^2.3.1"
flakeheaven = "*"
plac = "^1.4.3"


[tool.pytest.ini_options]
markers = ["network: tests that make real HTTP requests"]

[tool.poetry.scripts]
wgu-osmt-json2ttl = "wgu_osmt.orchestrator_json2ttl:main"


[tool.poetry.build]
generate-setup-file = true


[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


# ---------------------------------------------------------------------------
# flakeheaven
# ---------------------------------------------------------------------------
[tool.flakeheaven]
base = "https://raw.githubusercontent.com/flakeheaven/flakeheaven/main/pyproject.toml"
exclude = ["__init__.py", "README.md", "setup.py", ".venv", ".git"]
format = "grouped"
max_line_length = 500
show_source = true


[tool.flakeheaven.plugins]
"flake8-*" = ["+*"]
flake8-bandit = ["-*", "+S1??"]
flake8-docstrings = ["-*"]
pyflakes = ["+*", "-F401", "-F403"]
